# puku-vs-editor

./: .gitignore  BUILD_FIX_SUMMARY.md  CLAUDE.md  DEBIAN_BUILD_GUIDE.md  DISPLAYLOCATION-IMPLEMENTATION.md  FEATURE-64-IMPLEMENTATION.md  FIM_CONTEXT_DEDUPLICATION_STRATEGY.md  FIM_CONTEXT_INTEGRATION.md  INDEXING_FOLDER_DELETION_PRD.md  MANUAL_TESTING_DELETION_RECOVERY.md  Makefile  PACKAGING.md  README.md  RERANKING_CLIENT_IMPLEMENTATION.md  SETUP.md  build-binary.sh  build-deb.sh  build-dmg-from-outbuild.sh  build-dmg-gulp.sh  build-dmg-optimized.sh  build-dmg-production.sh  build-dmg-simple-vscode-only.sh  build-dmg-simple.sh  build-dmg-working.sh  build-dmg.sh  build-linux-optimized.sh  build-standalone-crossplatform.sh  build-standalone.sh  build-windows-optimized.ps1  create-binary-package.sh  fix-launcher.sh  install.sh  launch.sh  puku  puku-editor-installed-launcher  test-fix.sh  test-linux-build-deps.sh  test-typescript-fix.sh
.claude/: memory-update-2025-12-02.md
.github/: BUILD_OPTIMIZATION_SUMMARY.md
docs/: README.md  architecture-fim-metadata-backend.md  architecture-inline-completion-display-location.md  config-refactoring-issue-20.md  examples-fim-metadata-backend.md  examples-inline-completion-display-location.md  how-puku-indexing-integrates-with-fim.md  prd-authentication-uri-scheme.md  prd-fim-metadata-backend.md  prd-inline-completion-display-location.md  prd-multi-edit-diagnostics.md  prd-tab-to-jump-feature.md  prd-tab-to-jump-fix.md  (+1 more)
github/copilot-proxy/: README.md  pyproject.toml
github/copilot-proxy/copilot_proxy/: __main__.py  app.py
(+11676 files in other folders)
