[project]
name = "copilot-proxy"
version = "0.1.0"
description = "Ollama-compatible proxy for Z.AI GLM models with FIM support"
authors = [{name = "Jijun Leng"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.1",
]

[project.scripts]
copilot-proxy = "copilot_proxy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.1",
]
